reactive-fn/tests/compile_fail/obs_ref/map_ref_lifetime.stderr
error[E0505]: cannot move out of `value` because it is borrowed
  --> tests/compile_fail/obs_ref/map_ref_lifetime.rs:12:10
   |
8  |     let value = X;
   |         ----- binding `value` declared here
9  |     let or = ObsRefBuilder::from_value_non_static(&value, oc)
   |                                                   ------ borrow of `value` occurs here
...
12 |     drop(value);
   |          ^^^^^ move out of `value` occurs here
13 |     drop(or);
   |          -- borrow later used here
